--- a/app/src/main/res/layout/list_item_device_shutter.xml
+++ b/app/src/main/res/layout/list_item_device_shutter.xml
@@ -8,7 +8,7 @@
     app:cardUseCompatPadding="true"
     app:cardElevation="5dp">
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         tools:ignore="UseCompoundDrawables"
@@ -19,6 +19,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginStart="20sp"
             android:textSize="30sp"
             android:textStyle="bold"
             tools:text="Shutter"/>
@@ -26,6 +27,7 @@
             android:id="@+id/seekBar_shutter"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="30dp"/>
+            android:layout_gravity="center"
+            android:layout_marginStart="15dp"/>
     </LinearLayout>
 </com.google.android.material.card.MaterialCardView>
