--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,12 +11,11 @@ android:layout_height="match_parent">
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <!--TODO finire la colorazione della barra-->
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/toolbar"
-            android:background="?attr/colorPrimary"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"/>
+            android:layout_height="?attr/actionBarSize"
+            style="@style/Widget.MaterialComponents.Toolbar.Primary"/>
 
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/fragment_container"
